--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "ka-table": "^7.6.3",
+    "moment": "^2.29.4",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -17,6 +19,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "rsuite": "^5.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
